2007-12-11  Stefan Kost  <ensonic@users.sf.net>

	patch by: Kouhei Sutou <kou@cozmixng.org>

	* gtk-doc.xsl:
	  Consitently use UTF-8 instead of US-ASCII for output encoding.
	  Fixes #497367

2007-12-10  Mathias Hasselmann  <mathias@openismus.com>

	* configure.in:
	* gtkdoc-depscan.in:
	* Makefile.am:
	  Add gtkdoc-depscan, which resolves source code dependencies
	  by scanning devhelp2 books.

2007-12-10  Stefan Kost  <ensonic@users.sf.net>

	* devhelp2.xsd:
	  Update schema.
	  
	* gtk-doc.notmpl.make:
	  Remove left-over 'fi'.

2007-12-05  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Better fix for #501066.

2007-12-05  Stefan Kost  <ensonic@users.sf.net>

	* devhelp2.xsd:
	  Add first version of the schema.
	  
	* devhelp2.xsl:
	  Unbreak the devhelp2 file generation.

	* tests/gtkdoctest.sh:
	  Add comment about doing schmea checks once they work.

2007-12-04  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Apply build flags cleanups from #498521. Spotted by
	  dmacks@netspace.org.

2007-12-04  Stefan Kost  <ensonic@users.sf.net>

	* tests/gobject/src/giface.c:
	* tests/gobject/src/gobject.c:
	  Uhm, unbreak the links in the test docs.

2007-12-04  Stefan Kost  <ensonic@users.sf.net>

	* tests/gobject/src/giface.c:
	* tests/gobject/src/gobject.c:
	  Little test cleanup. The bug was already fixed.

2007-12-04  Stefan Kost  <ensonic@users.sf.net>

	* tests/gobject/docs/tester-sections.txt:
	* tests/gobject/docs/tester.types:
	* tests/gobject/src/Makefile.am:
	* tests/gobject/src/giface.c:
	* tests/gobject/src/giface.h:
	* tests/gobject/src/gobject.c:
	* tests/gobject/src/gobject.h:
	* tests/gobject/src/tester.c:
	* tests/gobject/src/tester.h:
	  Refactor tests for #489279.

2007-12-04  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-common.pl.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Add testcase for #501038. Improve struct parsing to correctly finish