@@ -1,3 +1,9 @@
+2007-12-11  Mathias Hasselmann  <mathias@openismus.com>
+
+	* gtkdoc-depscan.in: 
+	  Print reasonable error message when passing
+	  non-existant files on command line.
+
 2007-12-11  Stefan Kost  <ensonic@users.sf.net>
 
 	patch by: Kouhei Sutou <kou@cozmixng.org>
